# airc

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: gitleaks.yml
tutorial/: first_qa.ipynb  first_qa.slides.html  second_lecture.ipynb  second_lecture_ans.ipynb  second_lecture_qa.ipynb  second_lecture_qa.slides.html
