[project]
name = "airc"
version = "0.1.0"
description = "AI-RC lectures"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "trieste",
    "notebook",
    "matplotlib",
    "taskipy",
    "tensorflow-intel; sys_platform == 'win32'"
]

[tool.taskipy.tasks]
notebooks = "uv run jupyter-notebook notebooks/"
