[project]
name = "airc"
version = "0.1.0"
description = "AI-RC lectures"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "trieste>=4.2",
    "notebook",
    "matplotlib",
    "taskipy",
    "tensorflow-cpu; sys_platform == 'win32'"
]

[tool.taskipy.tasks]
tutorial = "uv run jupyter-notebook tutorial/"
